# calm-brain

./: .buildinfo  .gitignore  CHANGES.rst  CODE_OF_CONDUCT.rst  README.md  changelog.html  data-use-terms.html  genindex.html  index.html  objects.inv  pyproject.toml  reference.html  search.html  searchindex.js  setup.html  user-guide.html
.github/workflows/: documentation.yaml
_sources/: index.rst.txt  reference.rst.txt  setup.rst.txt  user-guide.rst.txt
_sources/examples/: 1_mean_eeg.rst.txt
_sources/examples/notebooks/modality/: Anatomical_MRI_with_NiBabel.ipynb.txt  NIRS_Data_Reading_with_MNE.ipynb.txt
_sources/examples/notebooks/multimodal/: EEG_Patterns_Across_Disorders.ipynb.ipynb.txt
docs/source/: changelog.rst  conf.py  index.rst  user-guide.rst
docs/source/examples/: 2_hippo_brain_ratio.rst  index.rst
docs/source/examples/notebooks/modality/: Clinical_Records_Retrieval_with_Almirah.ipynb.ipynb
examples/: 1_mean_eeg.html  2_hippo_brain_ratio.html  index.html
examples/notebooks/intro/: Exploring_CALM_Brain_with_Almirah.html  Exploring_CALM_Brain_with_Almirah.ipynb
examples/notebooks/modality/: Anatomical_MRI_with_NiBabel.html  Clinical_Records_Retrieval_with_Almirah.ipynb.html  EEG_Reading_Processing_with_MNE.html  EEG_Reading_Processing_with_MNE.ipynb  Eye_Tracking_with_MNE.html  Eye_Tracking_with_MNE.ipynb  NIRS_Data_Reading_with_MNE.html
examples/notebooks/multimodal/: EEG_Patterns_Across_Disorders.ipynb.html
