[tool.poetry]
name = "calm-brain"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
furo = "^2024.4.27"
nbsphinx = "^0.9.3"
sphinx-gallery = "^0.16.0"
sphinx-copybutton = "^0.5.2"

[tool.poetry.group.dev.dependencies]
jupyterlab = "^4.1.8"
towncrier = "^23.11.0"
sphinx-autobuild = "^2024.4.16"

[tool.poetry.group.tutorials.dependencies]
mne = "^1.7.0"
numpy = "^1.26.4"
nibabel = "^5.2.1"
nilearn = "^0.10.4"
seaborn = "^0.13.2"
matplotlib = "^3.8.4"
almirah = {path = "../almirah", develop = true}

[tool.poetry.group.mysql.dependencies]
pymysql = "^1.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.towncrier]
package = "calm-brain"
directory = "changelog"
filename = "CHANGES.rst"
issue_format = "`#{issue} <shttp://gin.ncbs.res.in:/cbm/data/issues/{issue}>`__"
title_format = "{version} ({project_date})"
